shoping section complet

--- a/index.html
+++ b/index.html
@@ -64,83 +64,151 @@
       </div>
     </section>
     <section>
-      <div class="product_section">
-        <h2 class="product_head">Popular Collection</h2>
-        <div class="product_img">
-          <img src="image/tripod.png" alt="">
-          <h2 class="product_titel">Flex Tripod</h2>
-          <p class="product_number">$50.48</p>
-          <p class="product_reting"></p>
-          <p class="product_descoption">Wordwide shifting available
-            Buyers protection possible!</p>
+      <div class="contener">
+        <div class="product_header_titel">
+          <h2 class="product_head">Popular Collection</h2>
         </div>
-        <div class="product_img">
-          <img src="image/mic.png" alt="">
-          <h2 class="product_titel">microphone</h2>
-          <p class="product_number">$125.25</p>
-          <p class="product_reting"></p>
-          <p class="product_descoption">Wordwide shifting available
-            Buyers protection possible!</p>
-        </div>
-        <div class="product_img">
-          <img src="image/airpod.png" alt="">
-          <h2 class="product_titel">Airbuds</h2>
-          <p class="product_number">$100.00</p>
-          <p class="product_reting"></p>
-          <p class="product_descoption">Wordwide shifting available
-            Buyers protection possible!</p>
-        </div>
-        <div class="product_img">
-          <img src="image/drone.png" alt="">
-          <h2 class="product_titel">Drone</h2>
-          <p class="product_number">$980.25</p>
-          <p class="product_reting"></p>
-          <p class="product_descoption">Wordwide shifting available
-            Buyers protection possible!</p>
+        <div class="product_img_section_areya">
+          <div class="product_img">
+            <img class="all_img" src="image/tripod.png" alt="">
+            <h2 class="product_titel">Flex Tripod</h2>
+            <p class="product_number">$50.48</p>
+            <p class="product_reting">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              4.99
+            </p>
+            <p class="product_descoption">Wordwide shifting available
+              Buyers protection possible!</p>
+          </div>
+          <div class="product_img">
+            <img class="all_img" src="image/mic.png" alt="">
+            <h2 class="product_titel">microphone</h2>
+            <p class="product_number">$125.25</p>
+            <p class="product_reting">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              4.99
+            </p>
+            <p class="product_descoption">Wordwide shifting available
+              Buyers protection possible!</p>
+          </div>
+          <div class="product_img">
+            <img class="all_img" src="image/airpod.png" alt="">
+            <h2 class="product_titel">Airbuds</h2>
+            <p class="product_number">$100.00</p>
+            <p class="product_reting">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              4.99
+            </p>
+            <p class="product_descoption">Wordwide shifting available
+              Buyers protection possible!</p>
+          </div>
+          <div class="product_img">
+            <img class="all_img" src="image/drone.png" alt="">
+            <h2 class="product_titel">Drone</h2>
+            <p class="product_number">$980.25</p>
+            <p class="product_reting">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              4.99
+            </p>
+            <p class="product_descoption">Wordwide shifting available
+              Buyers protection possible!</p>
+          </div>
+
+          <div class="product_img">
+            <img class="all_img" src="image/lights.png" alt="">
+            <h2 class="product_titel">Light Setup</h2>
+            <p class="product_number">$1200.00</p>
+            <p class="product_reting">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              4.99
+            </p>
+            <p class="product_descoption">Wordwide shifting available
+              Buyers protection possible!</p>
+
+          </div>
+
+          <div class="product_img">
+            <img class="all_img" src="image/setup.png" alt="">
+            <h2 class="product_titel">Photoshoot set</h2>
+            <p class="product_number">$820.40</p>
+            <p class="product_reting">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              4.99
+            </p>
+            <p class="product_descoption">Wordwide shifting available
+              Buyers protection possible!</p>
+          </div>
+          <div class="product_img">
+            <img class="all_img" src="image/camera.png" alt="">
+            <h2 class="product_titel">Vlogging Camera</h2>
+            <p class="product_number">$1800.80</p>
+            <p class="product_reting">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              4.99
+            </p>
+            <p class="product_descoption">Wordwide shifting available
+              Buyers protection possible!</p>
+          </div>
+          <div class="product_img">
+            <img class="all_img" src="image/single-light.png" alt="">
+            <h2 class="product_titel">Green Screen</h2>
+            <p class="product_number">$25.48</p>
+            <p class="product_reting">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              4.99
+            </p>
+            <p class="product_descoption">Wordwide shifting available
+              Buyers protection possible!</p>
+          </div>
+          <div class="product_img">
+            <img class="all_img" src="image/action.png" alt="">
+            <h2 class="product_titel">Action Camera</h2>
+            <p class="product_number">$380.00</p>
+            <p class="product_reting">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              <img class="star_img" src="image/logos/Star_fill.svg" alt="">
+              4.99
+            </p>
+            <p class="product_descoption">Wordwide shifting available
+              Buyers protection possible!</p>
+          </div>
         </div>
 
-        <div class="product_img">
-          <img src="image/lights.png" alt="">
-          <h2 class="product_titel">Light Setup</h2>
-          <p class="product_number">$1200.00</p>
-          <p class="product_reting"></p>
-          <p class="product_descoption">Wordwide shifting available
-            Buyers protection possible!</p>
-
-        </div>
-
-        <div class="product_img">
-          <img src="image/setup.png" alt="">
-          <h2 class="product_titel">Photoshoot set</h2>
-          <p class="product_number">$820.40</p>
-          <p class="product_reting"></p>
-          <p class="product_descoption">Wordwide shifting available
-            Buyers protection possible!</p>
-        </div>
-        <div class="product_img">
-          <img src="image/camera.png" alt="">
-          <h2 class="product_titel">Vlogging Camera</h2>
-          <p class="product_number">1800.80</p>
-          <p class="product_reting"></p>
-          <p class="product_descoption">Wordwide shifting available
-            Buyers protection possible!</p>
-        </div>
-        <div class="product_img">
-          <img src="image/single-light.png" alt="">
-          <h2 class="product_titel">Green Screen</h2>
-          <p class="product_number">25.48</p>
-          <p class="product_reting"></p>
-          <p class="product_descoption">Wordwide shifting available
-            Buyers protection possible!</p>
-        </div>
-        <div class="product_img">
-          <img src="image/action.png" alt="">
-          <h2 class="product_titel">Action Camera</h2>
-          <p class="product_number">380.00</p>
-          <p class="product_reting"></p>
-          <p class="product_descoption">Wordwide shifting available
-            Buyers protection possible!</p>
-        </div>
       </div>
     </section>
   </main>
