footer section complet

--- a/index.html
+++ b/index.html
@@ -211,9 +211,36 @@
 
       </div>
     </section>
+    <section>
+      <div class="contener">
+        <div class="featurs_section">
+          <div class="featurs_img">
+            <img src="image/gear.png" alt="">
+          </div>
+          <div class="featurs_text_areya">
+            <h2 class="featurs_titel">Featured products at one place</h2>
+            <p class="featurs_descoption">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+              Velit
+              officia consequat duis enim velit
+              mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            <button class="join_btn">Join Now <i class="fa-solid fa-arrow-right"></i></button>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer>
-
+    <div class="footer_areya">
+      <h2 class="footer_titel">Influencer products</h2>
+      <p class="footer_descoption">Copyright © 2020 influencer products</p>
+      <p>All rights reserved</p>
+    </div>
+    <div class="icon_areya">
+      <i class="fa-brands fa-instagram box"></i>
+      <i class="fa-solid fa-globe box"></i>
+      <i class="fa-brands fa-twitter box"></i>
+      <i class="fa-brands fa-youtube box"></i>
+    </div>
   </footer>
 </body>
 
